tests/fixtures/invalid/void_parameter_named.c
int helper(void value) {
    return 1;
}

int main() {
    return helper(0);
}
